gccida/g0/compute_block_backward_dependences
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_block_backward_dependences/src/sched-rgn.c:2998:1: error: use of undeclared identifier 'deps_0'
deps_0 *v1; // rax 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_block_backward_dependences/src/sched-rgn.c:2998:9: error: use of undeclared identifier 'v1'
deps_0 *v1; // rax 
        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_block_backward_dependences/src/sched-rgn.c:3005:1: error: use of undeclared identifier 'deps_0'
deps_0 tmp_deps; // [rsp+10h] [rbp-90h] BYREF 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_block_backward_dependences/src/sched-rgn.c:3009:1: error: use of undeclared identifier 'v1'
v1 = &bb_deps[bb]; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_block_backward_dependences/src/sched-rgn.c:3010:21: error: use of undeclared identifier 'v1'
pending_read_mems = v1->pending_read_mems; 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_block_backward_dependences/src/sched-rgn.c:3011:1: error: use of undeclared identifier 'tmp_deps'
tmp_deps.pending_read_insns = v1->pending_read_insns; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_block_backward_dependences/src/sched-rgn.c:3011:31: error: use of undeclared identifier 'v1'
tmp_deps.pending_read_insns = v1->pending_read_insns; 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_block_backward_dependences/src/sched-rgn.c:3012:1: error: use of undeclared identifier 'tmp_deps'
tmp_deps.pending_read_mems = pending_read_mems; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_block_backward_dependences/src/sched-rgn.c:3013:22: error: use of undeclared identifier 'v1'
pending_write_mems = v1->pending_write_mems; 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_block_backward_dependences/src/sched-rgn.c:3014:1: error: use of undeclared identifier 'tmp_deps'
tmp_deps.pending_write_insns = v1->pending_write_insns; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_block_backward_dependences/src/sched-rgn.c:3014:32: error: use of undeclared identifier 'v1'
tmp_deps.pending_write_insns = v1->pending_write_insns; 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_block_backward_dependences/src/sched-rgn.c:3015:1: error: use of undeclared identifier 'tmp_deps'
tmp_deps.pending_write_mems = pending_write_mems; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_block_backward_dependences/src/sched-rgn.c:3016:29: error: use of undeclared identifier 'v1'
last_pending_memory_flush = v1->last_pending_memory_flush; 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_block_backward_dependences/src/sched-rgn.c:3017:14: error: use of undeclared identifier 'tmp_deps'
*( _QWORD *)&tmp_deps.pending_lists_length = *( _QWORD *)&v1->pending_lists_length; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_block_backward_dependences/src/sched-rgn.c:3017:59: error: use of undeclared identifier 'v1'
*( _QWORD *)&tmp_deps.pending_lists_length = *( _QWORD *)&v1->pending_lists_length; 
                                                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_block_backward_dependences/src/sched-rgn.c:3018:1: error: use of undeclared identifier 'tmp_deps'
tmp_deps.last_pending_memory_flush = last_pending_memory_flush; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_block_backward_dependences/src/sched-rgn.c:3019:26: error: use of undeclared identifier 'v1'
sched_before_next_call = v1->sched_before_next_call; 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_block_backward_dependences/src/sched-rgn.c:3020:1: error: use of undeclared identifier 'tmp_deps'
tmp_deps.last_function_call = v1->last_function_call; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_block_backward_dependences/src/sched-rgn.c:3020:31: error: use of undeclared identifier 'v1'
tmp_deps.last_function_call = v1->last_function_call; 
                              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_block_backward_dependences/src/obj/sched-rgn.o] Error 1
